syntax = "proto3";

package com.example.littlechat.proto;

enum StatusCode {
    SUCCESS = 0;
    INTERNAL_ERROR = 1;
    UNKNOWN_ERROR = 2;
}

message DetailedError {
    string message = 1;
}

message ResponseCommon {
    StatusCode statusCode = 1;
    oneof detailedErrorOptional {
        DetailedError detailedError = 2;
    }
}
